tests/codegen/errors/codegen/strings/atom.codegen.stateful.collection.string.contains.char.coerced.failure.compile/stateful-collection-string-contains-char-coerced-failure-compile.mon
;; TEST-ID: tests.codegen.stateful.collection.string.contains.char.coerced.failure.compile
;; TEST-TIER: known-fail
;; TEST-STATUS: quarantined-baseline-2026-06-15
;; TEST-KNOWN-FAILURE: diagnostic-mismatch
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 40-collections
;; TEST-SUBSET: strings
;; TEST-QUALITY: branch-state-regression
;; TEST-CODEGEN-ATOM: atom.codegen.stateful.collection.string.contains.char.coerced.failure.compile
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.runtime-codegen-corpus, monadc.context.language.codegen-atom-web
;; TEST-PURPOSE: contains? String with non-string needle unbox branch should reject or diagnose.
;; TEST-ATOM: atom.codegen.stateful.collection.string.contains.char.coerced.failure.compile
;; TEST-EXPECT: fail:compile
;; TEST-CODEGEN-PATH: codegen.collection.dispatch
;; TEST-CODEGEN-PATH: codegen.runtime.collection
;; TEST-COVERAGE: codegen.c:3934-4016 array/set/map/range literal branches
;; TEST-COVERAGE: codegen.c:6965-7313 list primitive branches
;; TEST-COVERAGE: codegen.c:8362-8555 set/map operation branches
;; TEST-COVERAGE: codegen.c:8555-8905 contains?/starts-with?/ends-with?/count branches
;; TEST-COVERAGE: codegen.c:9920-10160 collection-as-function indexing branches
;; TEST-USES-ATOM: atom.codegen.category.40.collections
;; TEST-USES-ATOM: atom.codegen.category.00.values
;; TEST-USES-ATOM: atom.codegen.subset.40.collections.strings
;; TEST-MENU: errors/codegen/strings/atom.codegen.stateful.collection.string.contains.char.coerced.failure.compile
;; TEST-MENU-PATH: codegen/errors/codegen/strings/atom.codegen.stateful.collection.string.contains.char.coerced.failure.compile
;; TEST-ATOM-LEAF: atom.codegen.stateful.collection.string.contains.char.coerced.failure.compile
;; TEST-CLI-TARGET: codegen errors codegen strings

(module Main)
(show (contains? "abc" 1))
